--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <title>Goals List</title>
   </head>
   <body>
+    <div id='backdrop-root'></div>
+    <div id='modal-root'></div>
     <div id="root"></div>
   </body>
 </html>
